fixed image overlap in image tag list

--- a/app/assets/stylesheets/questions-page.scss
+++ b/app/assets/stylesheets/questions-page.scss
@@ -549,7 +549,7 @@
           display: block;
           font-weight:500;
           position: relative;
-          width: 55%;
+          width: 40%;
           text-indent: -20px;
           font-size: 15px;
           margin-bottom: 0px !important;
